--- a/css/main.css
+++ b/css/main.css
@@ -170,6 +170,9 @@ td {
 
 #contentT {
 	cursor: pointer;
+}
+
+#contentT >div {
 	border-bottom: 1px solid #DDDDDD;
 }
 
@@ -221,7 +224,6 @@ td {
 #main {
 	padding: 30px;
 	margin: 0 0 0 200px;
-	max-width: 800px;
 }
 
 #main p {
@@ -303,12 +305,12 @@ td {
 
 .articles_table {
 	border-right: 1px solid #7C8AA5;
-	box-shadow: 1px 0 0 #4C5A75; 	
+	box-shadow: -1px 0 0 #4C5A75; 	
 }
 
 .articles_td {
 	border-left: 1px solid #7C8AA5;
-	box-shadow: -1px 0 0 #4C5A75;
+	box-shadow: 1px 0 0 #4C5A75;
 }
 
 .articles_td:hover {
@@ -321,12 +323,12 @@ td {
 
 .videos_table {
 	border-right: 1px solid #A57C8A;
-	box-shadow: 1px 0 0 #764D5B;
+	box-shadow: -1px 0 0 #764D5B;
 }
 
 .videos_td {
 	border-left: 1px solid #A57C8A;
-	box-shadow: -1px 0 0 #764D5B;
+	box-shadow: 1px 0 0 #764D5B;
 }
 
 .videos_td:hover {
@@ -339,12 +341,12 @@ td {
 
 .courses_table {
 	border-right: 1px solid #7CA58A;
-	box-shadow: 1px 0 0 #4D765B;
+	box-shadow: -1px 0 0 #4D765B;
 }
 
 .courses_td {
 	border-left: 1px solid #7CA58A;
-	box-shadow: -1px 0 0 #4D765B;
+	box-shadow: 1px 0 0 #4D765B;
 }
 
 .courses_td:hover {
@@ -357,12 +359,12 @@ td {
 
 .nopage_table {
 	border-right: 1px solid #777777;
-	box-shadow: 1px 0 0 #444444;
+	box-shadow: -1px 0 0 #444444;
 }
 
 .nopage_td {
 	border-left: 1px solid #777777;
-	box-shadow: -1px 0 0 #444444;	
+	box-shadow: 1px 0 0 #444444;	
 }
 
 .nopage_td:hover {
