--- a/css/main.css
+++ b/css/main.css
@@ -9,10 +9,12 @@ body {
 	min-height: 800px;
 	min-width: 800px;
 	font-size: 12px;
+	background: #FAFAFA;
 }
 
 header {
 	padding: 10px 10px 8px 10px;
+	background: #FFFFFF;
 }
 
 header h1 {
@@ -219,10 +221,10 @@ td {
 	font-size: 10px;
 	width: 100%;
 	height: 24px;
+	background: #FFFFFF;
 }
 
 #main {
-	padding: 30px;
 	margin: 0 0 0 200px;
 }
 
@@ -232,6 +234,33 @@ td {
 
 #main li {
 	margin: 10px 50px 10px 30px;
+}
+
+#main th {
+	border-bottom: 1px solid;
+	text-align: left;
+	padding: 5px 50px 5px 5px;
+}
+
+#main td {
+	padding: 5px 50px 5px 5px;
+}
+
+#main div {
+	background: #FFFFFF;
+	padding: 30px;
+	border-bottom: 1px solid #DDDDDD;
+}
+
+#main #module {
+	background: #FFFFFF;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;
+	color: #444444;
+	margin: 30px;
+	padding: 10px;
+	float: left;
+	text-align: center;
 }
 
 #footerT {
@@ -397,4 +426,26 @@ td {
 
 .js {
 	display: none;
+}
+
+.even {
+	background: #FAFAFA;
+}
+
+.hor_border {
+	border-bottom: 1px solid #DDDDDD;
+	border-top: 1px solid #DDDDDD;
+}
+
+.ver_border {
+	border-left: 1px solid #DDDDDD;
+	border-right: 1px solid #DDDDDD;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+.left {
+	text-align: left;
 }
