--- a/css/main.css
+++ b/css/main.css
@@ -229,6 +229,7 @@ td {
 
 #main {
 	margin: 0 0 0 200px;
+	border-bottom: 1px solid #DDDDDD;
 }
 
 #main p {
@@ -249,10 +250,13 @@ td {
 	padding: 5px 10px 5px 5px;
 }
 
+#main tfoot td {
+	border-top: 1px solid #DDDDDD;
+}
+
 #main div {
 	background: #FFFFFF;
 	padding: 20px;
-	border-bottom: 1px solid #DDDDDD;
 }
 
 #module {
@@ -274,6 +278,7 @@ td {
 	border: 1px solid #DDDDDD;
 	color: #444444;
 	padding: 10px;
+	max-width: 1160px;
 }
 
 #bar table {
@@ -487,4 +492,6 @@ td {
 	font-size: 85%;
 }
 
-.
+.plotNode {
+	cursor:pointer;
+}
