--- a/css/main.css
+++ b/css/main.css
@@ -101,6 +101,10 @@ td {
 	
 }
 
+svg {
+
+}
+
 #log {
 	border: 1px solid #3D4B66;
 	color: #FFFFFF;
@@ -241,7 +245,7 @@ td {
 }
 
 #main th {
-	border-bottom: 1px solid;
+	border-bottom: 1px solid #000000;
 	text-align: left;
 	padding: 5px 10px 5px 5px;
 }
