--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 * {
 	margin: 0;
 	padding: 0;
+	font-family: Lucida Grande,Arial,Helvetica,sans-serif;
 }
 
 body {
-	font-family: Lucida Grande,Arial,Helvetica,sans-serif;
 	width: auto;
 	min-height: 800px;
 	min-width: 800px;
@@ -47,7 +47,7 @@ footer {
 }
 
 h1 {
-	
+
 }
 
 h2 {
@@ -101,7 +101,7 @@ td {
 	
 }
 
-svg {
+input, textarea {
 
 }
 
@@ -258,7 +258,7 @@ svg {
 	border-top: 1px solid #DDDDDD;
 }
 
-#main div {
+#main >div {
 	background: #FFFFFF;
 	padding: 20px;
 }
@@ -287,6 +287,22 @@ svg {
 
 #bar table {
 	width: 100%;	
+}
+
+#createForm {
+	color: #444444;
+}
+
+
+#createForm input, #createForm textarea {
+	width: 800px;
+	border-radius: 2px;
+	border: 1px solid #DDDDDD;
+	padding: 3px;
+}
+
+#createForm textarea {
+	height: 400px;
 }
 
 #footerT {
@@ -498,4 +514,15 @@ svg {
 
 .plotNode {
 	cursor:pointer;
+}
+
+.create {
+	color: #FFFFFF;
+	background: #44BB44;
+}
+
+.create:hover {
+	color: #FFFFFF;
+	background: #44CC44;
+	box-shadow: 0 0 1px #777777;
 }
