--- a/css/main.css
+++ b/css/main.css
@@ -524,5 +524,5 @@ input, textarea {
 .create:hover {
 	color: #FFFFFF;
 	background: #44CC44;
-	box-shadow: 0 0 1px #777777;
+	box-shadow: 0px 0px 2px #AAAAAA;
 }
