--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 	margin: 0;
 	padding: 0;
 	font-family: Lucida Grande,Arial,Helvetica,sans-serif;
-	-moz-box-sizing: border-box;
+	/*-moz-box-sizing: border-box;*/
 }
 
 body {
@@ -312,6 +312,10 @@ progress {
 	width: 100%;	
 }
 
+#graph {
+	width: 1180px;
+}
+
 #createForm {
 	color: #444444;
 }
@@ -339,6 +343,28 @@ progress {
 #createForm #title {
 	font-size: 2em;
 	font-weight: bold;
+}
+
+#delete {
+	width: 14px;
+	height: 16px;
+	background-image: url('../svg/delete.svg');
+	background-repeat: no-repeat;
+}
+
+#delete:hover {
+	background-image: url('../svg/delete_hover.svg');
+}
+
+#upload {
+	width: 16px;
+	height: 16px;
+	background-image: url('../svg/upload.svg');
+	background-repeat: no-repeat;
+}
+
+#upload:hover {
+	background-image: url('../svg/upload_hover.svg');
 }
 
 #footerT {
