--- a/css/main.css
+++ b/css/main.css
@@ -212,6 +212,12 @@ progress {
 	background: #E4E4E4;
 }
 
+#proj_name, #course_name {
+	width: 100%;
+	max-width:500px;
+	min-width:100px;
+}
+
 #search {
 	height: 24px;
 	border-bottom: 1px solid #DDDDDD;
@@ -249,6 +255,15 @@ progress {
 
 #main li {
 	margin: 10px 50px 10px 30px;
+	list-style: inherit;
+}
+
+#main #tbl {
+	border: 1px solid black;
+	border-radius: 3px;
+	width: 600px;
+	padding: 10px;
+	background:#FAFAFA;
 }
 
 #main th {
